default/objects/Config_for_Account_Quick_Opportunity__c/Config_for_Account_Quick_Opportunity__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store configuration of possible scenarios for quick creation of Opportunities from Account. Used in Lightning Experience.</description>
    <label>Config for Account Quick Opportunity</label>
</CustomObject>