default/objects/Config_for_Account_Quick_Opportunity__c/fields/Account_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Developer_Name__c</fullName>
    <description>Used to store Account Record Type Developer Name.</description>
    <inlineHelpText>Developer name of Account Record Type under which the new Opportunity can be created.</inlineHelpText>
    <label>Account Record Type Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>