default/objects/Config_for_Account_Quick_Opportunity__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is TRUE, the scenario for quick Opportunity creation is active.</description>
    <inlineHelpText>If this checkbox is TRUE, the scenario for quick Opportunity creation is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>