default/objects/Config_for_Account_Quick_Opportunity__c/fields/Offer_Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Integration_Name__c</fullName>
    <description>Stores unique Integration Name of the Offer, used when creating new Opportunity with FLEETCOR Offers.</description>
    <inlineHelpText>Please provide unique Integration Name of the Offer (can be found in FLEETCOR Offers &gt; Edit particular Offer). Can be filled in on only one scenario record per scenario.</inlineHelpText>
    <label>Offer Integration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>