default/objects/Config_for_Account_Quick_Opportunity__c/fields/Opp_Field_Value_Acc_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Opp_Field_Value_Acc_Field_Mapping__c</fullName>
    <description>Used to store values for specified Opportunity fields - either static value (e.g. &quot;Carnet 2019&quot;) or dynamic value (e.g. Account.Anzahl_PKW__c).</description>
    <inlineHelpText>Provide static (&quot;Carnet 2019&quot;) or dynamic (Account.Anzahl_PKW__c) field values.</inlineHelpText>
    <label>Opp Field Value/Acc Field Mapping</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>