default/objects/Config_for_Account_Quick_Opportunity__c/fields/Opportunity_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Field_API_Name__c</fullName>
    <inlineHelpText>Provide API Name of field that should be populated by this solution (either value or dynamic mapping).</inlineHelpText>
    <label>Opportunity Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>