default/objects/Config_for_Account_Quick_Opportunity__c/fields/Opportunity_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Developer_Name__c</fullName>
    <description>Used to store Opportunity Record Type Developer Name.</description>
    <inlineHelpText>Developer name of Opportunity Record Type under which the new Opportunity should be created.</inlineHelpText>
    <label>Opportunity Record Type Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>