default/objects/Config_for_Account_Quick_Opportunity__c/fields/Scenario_Description__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Description__c</fullName>
    <label>Scenario Description</label>
    <type>TextArea</type>
</CustomField>