default/objects/Config_for_Account_Quick_Opportunity__c/fields/Scenario_Name__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Name__c</fullName>
    <label>Scenario Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>