default/objects/Config_for_Account_Quick_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Scenario_Name__c</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Developer_Name__c</columns>
    <columns>Account_Record_Type_Developer_Name__c</columns>
    <columns>Opportunity_Field_API_Name__c</columns>
    <columns>Opp_Field_Value_Acc_Field_Mapping__c</columns>
    <columns>Offer_Integration_Name__c</columns>
    <columns>Scenario_Description__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>